<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="db_name" tools:ignore="MissingTranslation">"jwp.sqlite"</string>
    <string name="db_version" tools:ignore="MissingTranslation">"4"</string>
    <string name="app_dir" tools:ignore="MissingTranslation">"JWP"</string>

    <string-array name="language_arr" tools:ignore="MissingTranslation">
        <item>English</item>
        <item>French</item>
        <item>Русский</item>
        <item>Українська</item>
        <item>Deutsch</item>
        <item>Spanish</item>
        <item>漢語繁體字</item>
        <item>汉语简化字</item>
    </string-array>
    <string-array name="language_arr_value" tools:ignore="MissingTranslation">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="app_name">"Publications of Jehovah's Witnesses"</string>
    <string name="app_name_shot">"JWP"</string>
    <string name="description">"JWP - a program for readers of the publications of Jehovah's Witnesses.
Using this program, you will always have access to current issues of the journals "The Watchtower" and "Awake".
You will have to download publications in different languages ​​and in different formats (pdf, epub, mp3, aac).
And also to receive news from the site www.jw.org.
The program works as RSS client."</string>
    <string name="update_all_at_once">"Update all at once"</string>
    <string name="update_all_at_once_summary">"Update logs, news, books and brochures simultaneously"</string>
    <string name="books_brochures">"Books and brochures"</string>
    <string name="player">"MP3 player"</string>
    <string name="player_open">"Open in player"</string>
    <string name="player_play">"Play"</string>
    <string name="player_pause">"Pause"</string>
    <string name="send_bug_report">"Send mail report of error&#8230;"</string>
    <string name="not_email_client">"There are no email clients installed."</string>
    <string name="first_run_title">"First run"</string>
    <string name="first_run">"This is your first time running the program. Please go to settings and select the appropriate options for you. Then press the button - Download RSS."</string>
    <string name="no_internet">"No internet connection!"</string>
    <string name="no_sdcard">"SDCARD is not connected!"</string>
    <string name="dialog_loaing_rss">"Download RSS. Please wait&#8230;"</string>
    <string name="dialog_loaing_img">"Update images. Please wait&#8230;"</string>
    <string name="management">"Management"</string>
    <string name="analytics">"Reporting"</string>
    <string name="analytics_summary">"Allow to automatically send reports on the application?"</string>
    <string name="downloads_img">"Load images"</string>
    <string name="downloads_img_summary">"Load images automatically after the upgrade?"</string>
    <string name="downloads_on_start">"Auto download"</string>
    <string name="downloads_on_start_summary">"Automatically download RSS on startup?"</string>
    <string name="language">"Language"</string>
    <string name="language_summary">"Select a language publications."</string>
    <string name="exit">"Quit"</string>
    <string name="preference">"Settings"</string>
    <string name="refrashe">"Update"</string>
    <string name="intetface">"Interface"</string>
    <string name="open">"Open"</string>
    <string name="select_the_action">"Choose an action"</string>
    <string name="download_rss">"Download RSS"</string>
    <string name="download">"Download"</string>
    <string name="downloads">"Downloads"</string>
    <string name="download_title">"Download files"</string>
    <string name="download_failed">"Error occurred during loading"</string>
    <string name="download_finished">"Download Complete!"</string>
    <string name="download_finished_failed">"Download Complete ( %d with errors)."</string>
    <string name="download_cancelled">"Download canceled!"</string>
    <string name="download_progress">"Download "</string>
    <string name="download_task_addeded">"File added to the download queue."</string>
    <string name="select">"Select"</string>
    <string name="rss_pdf">"RSS - PDF"</string>
    <string name="rss_pdf_summary">"Load RSS feed PDF format"</string>
    <string name="rss_epub">"RSS - EPUB"</string>
    <string name="rss_epub_summary">"Load RSS feed EPUB format"</string>
    <string name="rss_mp3">"RSS - MP3"</string>
    <string name="rss_mp3_summary">"RSS feed upload MP3 format"</string>
    <string name="rss_aac">"RSS - AAC"</string>
    <string name="rss_aac_summary">"Load RSS feed AAC format"</string>
    <string name="rss_chanel">"RSS Feeds"</string>
    <string name="jornals">"Journals"</string>
    <string name="news">"News"</string>

</resources>